--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                basicvarianttools
+name:                Basic-Variant-Tools
 version:             0.1.0.0
-github:              "githubuser/basicvarianttools"
+github:              "Matthew-Mosior/Basic-Variant-Tools"
 license:             BSD3
 author:              "Matthew Mosior"
 maintainer:          "mattm.github@gmail.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/basicvarianttools#readme>
+description:         Please see the README on GitHub at <https://github.com/Matthew-Mosior/Basic-Variant-Tools#readme>
 
 dependencies:
 - base >= 4.7 && < 5
