--- a/stack.yaml
+++ b/stack.yaml
@@ -38,7 +38,10 @@ packages:
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 extra-deps:
+- ansi-terminal-0.9.1@sha256:48f53532d0f365ffa568c8cf0adc84c66f800a7d80d3329e4f04fa75392f4af1
 - directory-1.3.3.2@sha256:79e15a62f90cb9f20f46b2b56fe67d00d71ed54cfad07ea337695f9ebb74baa4
+- tasty-1.2.2@sha256:bc1939a936602ffdce44b667b50e980fc933006b19a4f03c5e7435633936e487
+- tasty-hunit-0.10.0.2@sha256:8e8bd5807cec650f5aebc5ada07b57620c863e69145e65249651c1b48d97bd70
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
