--- a/package.yaml
+++ b/package.yaml
@@ -43,7 +43,7 @@ library:
     - ScopedTypeVariables
 
 executables:
-  basicvarianttools-exe:
+  Basic-Variant-Tools-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -51,10 +51,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - basicvarianttools
+    - Basic-Variant-Tools
 
 tests:
-  basicvarianttools-test:
+  Basic-Variant-Tools-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -62,5 +62,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - basicvarianttools
-    
+    - Basic-Variant-Tools
