--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,8 @@ install:
 script:
 # Build the package, its tests, and its docs and run the tests
 - stack --no-terminal test --haddock --no-haddock-deps
+
+#Invoke coveralls and send test data to it.
+after_script:
+  - cabal install hpc-coveralls
+  - hpc-coveralls Basic-Variant-Tools-test
