--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ script:
 
 #Invoke coveralls and send test data to it.
 after_script:
-  - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.3.0/shc-linux-x64-$GHCVER.tar.bz2 | tar -xj
+  - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar -xj
   - ./shc Basic-Variant-Tools Basic-Variant-Tools-test
