--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ extra-deps:
 - directory-1.3.3.2@sha256:79e15a62f90cb9f20f46b2b56fe67d00d71ed54cfad07ea337695f9ebb74baa4
 - tasty-1.2.2@sha256:bc1939a936602ffdce44b667b50e980fc933006b19a4f03c5e7435633936e487
 - tasty-hunit-0.10.0.2@sha256:8e8bd5807cec650f5aebc5ada07b57620c863e69145e65249651c1b48d97bd70
+- process-1.6.5.1@sha256:77a9afeb676357f67fe5cf1ad79aca0745fb6f7fb96b786d510af08f622643f6,2468
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
